# hot-nerds-bot

./: .env.example  pyproject.toml
hot_nerds_app/: main.py  settings.py
hot_nerds_bot/: keyboards.py  main.py  messages.py  settings.py
